# krkn-ai

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
docs/: developer_guide.md
krkn_ai/algorithm/: base.py  genetic.py
krkn_ai/algorithm/genetic/: engine.py
krkn_ai/chaos_engines/: fitness.py  health_check_watcher.py  krkn_runner.py
krkn_ai/cli/: cmd.py
krkn_ai/cluster/: cluster_manager.py
krkn_ai/dashboard/: anomaly_config.yaml  app.py  data_loader.py  lineage.py  manager.py  report.css  report_generator.py
krkn_ai/dashboard/tabs/: anomalies.py  dashboard.py  detailed_scenarios.py  health_checks.py  logs.py
krkn_ai/models/: config.py
krkn_ai/models/scenario/: base.py  factory.py  parameters.py  scenario_container.py  scenario_network.py
krkn_ai/reporter/: generations_reporter.py  health_check_reporter.py  json_summary_reporter.py
krkn_ai/templates/: generator.py  krkn-ai.yaml.j2
krkn_ai/utils/: __init__.py  fs.py  output.py  prometheus.py  rng.py
scripts/: setup-demo-microservice.sh
scripts/nginx/: configmap.yaml  deployment.yaml
tests/unit/algorithm/: test_adaptive_mutation.py  test_genetic_algorithm.py  test_mutation.py  test_selection.py
tests/unit/chaos_engines/: test_fitness.py  test_health_check_watcher.py  test_krkn_runner_leak.py
tests/unit/cli/: test_cmd.py
tests/unit/cluster/: test_cluster_manager.py
tests/unit/dashboard/: test_data_loader.py  test_lineage.py  test_manager.py
tests/unit/models/: test_config.py
tests/unit/models/scenario/: test_base_scenario.py  test_composite_scenario_identity.py  test_scenario_classes.py  test_scenario_factory.py
tests/unit/reporter/: test_health_check_reporter.py  test_json_summary_reporter.py
tests/unit/templates/: test_generator.py
tests/unit/utils/: test_fs.py  test_output.py  test_rng.py  test_run_shell.py
